guessing using a function

--- a/2. Guessing a number.ipynb
+++ b/2. Guessing a number.ipynb
@@ -42,11 +42,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Using a function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too High, try again\n",
+      "Too Low, try again\n",
+      "Too Low, try again\n",
+      "Too High, try again\n",
+      "Too High, try again\n",
+      "Too High, try again\n",
+      "Too High, try again\n",
+      "Too High, try again\n",
+      "Too High, try again\n",
+      "Too High, try again\n",
+      "Too Low, try again\n",
+      "Too Low, try again\n",
+      "You have guess the correct random number 26\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "def guess(x):\n",
+    "    random_number=random.randint(1,x)\n",
+    "    guess=0\n",
+    "    while guess!=random_number:\n",
+    "        guess=int(input(f\"Guess a number between 1 and {x}: \"))\n",
+    "        if guess< random_number:\n",
+    "            print(\"Too Low, try again\")\n",
+    "        elif guess>random_number:\n",
+    "            print(\"Too High, try again\")\n",
+    "\n",
+    "    print(f\"You have guess the correct random number {random_number}\")\n",
+    "\n",
+    "guess(200)"
+   ]
   }
  ],
  "metadata": {
