Computer will gess

--- a/2. Guessing a number.ipynb
+++ b/2. Guessing a number.ipynb
@@ -45,19 +45,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using a function"
+    "### User will guess the number\n",
+    "#### Using a function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Too High, try again\n",
+      "Too Low, try again\n",
+      "Too Low, try again\n",
       "Too Low, try again\n",
       "Too Low, try again\n",
       "Too High, try again\n",
@@ -69,7 +71,8 @@
       "Too High, try again\n",
       "Too Low, try again\n",
       "Too Low, try again\n",
-      "You have guess the correct random number 26\n"
+      "Too Low, try again\n",
+      "You have guess the correct random number 102\n"
      ]
     }
    ],
@@ -89,6 +92,18 @@
     "\n",
     "guess(200)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Computer will guess the number"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
