--- a/2. Guessing a number.ipynb
+++ b/2. Guessing a number.ipynb
@@ -4,49 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normal code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Too high\n",
-      "Too high\n",
-      "Too high\n",
-      "Too high\n",
-      "Too high\n",
-      "Too high\n",
-      "You are right!\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "a = int(input(\"Enter a number: \"))\n",
-    "b = random.randint(1, a)\n",
-    "c= int(input(\"Try a number: \"))\n",
-    "while c!=b:\n",
-    "    if c>b:\n",
-    "        print(\"Too high\")\n",
-    "    else:\n",
-    "        print(\"Too low\")\n",
-    "    c= int(input(\"Try a number: \"))\n",
+    "# **Number Guessing Game**\n",
     "\n",
-    "print(\"You are right!\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### User will guess the number\n",
-    "#### Using a function"
+    "*Implements loops, conditionals and random modules*\n",
+    "\n",
+    "This is a simple game where the program randomly selects a number, and the user has to guess it. After each guess, the program provides feedback:\n",
+    "\n",
+    "* If the guess is too high, it tells the user to guess lower.\n",
+    "\n",
+    "* If the guess is too low, it tells the user to guess higher.\n",
+    "\n",
+    "* The game continues until the user guesses correctly.\n",
+    "\n",
+    "The program should also keep track of the number of attempts and display it when the user wins.\n",
+    "\n"
    ]
   },
   {
@@ -92,18 +63,6 @@
     "\n",
     "guess(200)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Computer will guess the number"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
