--- a/2. Guessing a number.ipynb
+++ b/2. Guessing a number.ipynb
@@ -22,47 +22,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Too Low, try again\n",
-      "Too Low, try again\n",
-      "Too Low, try again\n",
-      "Too Low, try again\n",
-      "Too High, try again\n",
-      "Too High, try again\n",
-      "Too High, try again\n",
-      "Too High, try again\n",
-      "Too High, try again\n",
-      "Too High, try again\n",
-      "Too High, try again\n",
-      "Too Low, try again\n",
-      "Too Low, try again\n",
-      "Too Low, try again\n",
-      "You have guess the correct random number 102\n"
+      "Too high, please try again.\n",
+      "Too low, please try again.\n",
+      "Too low, please try again.\n",
+      "Too high, please try again.\n",
+      "Too low, please try again.\n",
+      "Too high, please try again.\n",
+      "Too low, please try again.\n",
+      "Too low, please try again.\n",
+      "Too low, please try again.\n",
+      "Too low, please try again.\n",
+      "Congratulations! You guessed the correct number!\n",
+      "Number of attempts: 11\n"
      ]
     }
    ],
    "source": [
     "import random\n",
-    "def guess(x):\n",
-    "    random_number=random.randint(1,x)\n",
-    "    guess=0\n",
-    "    while guess!=random_number:\n",
-    "        guess=int(input(f\"Guess a number between 1 and {x}: \"))\n",
-    "        if guess< random_number:\n",
-    "            print(\"Too Low, try again\")\n",
-    "        elif guess>random_number:\n",
-    "            print(\"Too High, try again\")\n",
     "\n",
-    "    print(f\"You have guess the correct random number {random_number}\")\n",
+    "def number_guessing_game():\n",
+    "  try:\n",
+    "    start=int(input(\"Enter the lowest value: \"))\n",
+    "    end=int(input(\"Enter the highest value: \"))\n",
+    "  except ValueError:\n",
+    "    print(\"Invalide Input. Please Enter a valid number\")\n",
+    "    return\n",
     "\n",
-    "guess(200)"
+    "\n",
+    "  secret_number=random.randint(start,end)\n",
+    "\n",
+    "  attempts=0\n",
+    "  while True:\n",
+    "    try:\n",
+    "      guessed=int(input(\"Enter your guessed number\"))\n",
+    "      attempts+=1\n",
+    "\n",
+    "      if guessed>secret_number:\n",
+    "        print(\"Too high, please try again.\")\n",
+    "      elif guessed<secret_number:\n",
+    "        print(\"Too low, please try again.\")\n",
+    "      else:\n",
+    "        print(\"Congratulations! You guessed the correct number!\")\n",
+    "        print(f\"Number of attempts: {attempts}\")\n",
+    "        break\n",
+    "    except ValueError:\n",
+    "      print(\"Invalid input. Please enter a valid number.\")\n",
+    "\n",
+    "number_guessing_game()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
